src/test/resources/failing/fail73.pnd
template Foo<A> {
    P(x) : int
    @type Animal
}
Foo<_> as F1
@output @constructor F1.ZZ